--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
   <div id="loading" class="screen">
     <noscript>Enable JavaScript</noscript>
-    <h1 class="loading-text">The file is a bit of big, please wait...</h1>
+    <h1 class="loading-text">The file is a bit large, please wait...</h1>
     
     <div class="progress-bar-outer"><div class="progress-bar-inner" id="loading-inner"></div></div>
   </div>
