uploaded main page

--- a/index.html
+++ b/index.html
@@ -9,24 +9,20 @@
         <title>Cwulaek's Scratch Works</title>
     </head>
     <body style="background-color:powderblue;" class="container">
+        <font size="20">Cwulaek's Scratch Works</font></br>
         <a href="./Codemon/index.html">
-            <img src="./Codemon/cover.png" width="300" height="225">
-            </br>
+            <img src="./Codemon/cover.png" width="300" height="225"></br>
             Codemon(Scratch ver Pokemon)
-        </a>
-        </br>
+        </a></br>
         <a href="./ISOBALL/index.html">
-            <img src="./ISOBALL/cover.png" width="300" height="225">
-            </br>
+            <img src="./ISOBALL/cover.png" width="300" height="225"></br>
             ISOBALL(Unofficial)
-        </a>
-        </br>
+        </a></br>
         <a href="./Parabox/index.html">
-            <img src="./Parabox/cover.png" width="300" height="225">
-            </br>
+            <img src="./Parabox/cover.png" width="300" height="225"></br>
             Parabox(Unofficial)
-        </a>
-        </br></br>
+        </a></br>
+        </br>
         <a href="https://github.com/Cwulaek/Cwulaek.github.io/blob/main/README.md">README(Help)</a>
     </body>
 </html>
