update main page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
         <title>Cwulaek's Scratch Works</title>
     </head>
     <body style="background-color:powderblue;" class="container">
-        <font size="20">Cwulaek's Scratch Works</font></br>
+        <style>
+            .title-font {
+                font-size: xx-large;
+            }
+        </style>
+        <a class="title-font">Cwulaek's Scratch Works</a></br>
         <a href="./Codemon/index.html">
             <img src="./Codemon/cover.png" width="300" height="225"></br>
             Codemon(Scratch ver Pokemon)
