--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a class="title-font">Cwulaek's Scratch Works</a></br>
         <a href="./Codemon/index.html">
             <img src="./Codemon/cover.png" width="300" height="225"></br>
-            Codemon(Scratch ver Pokemon)
+            Codemon(Unofficial, Scratch ver Pokemon)
         </a></br>
         <a href="./ISOBALL/index.html">
             <img src="./ISOBALL/cover.png" width="300" height="225"></br>
