--- a/Parabox/index.html
+++ b/Parabox/index.html
@@ -160,7 +160,7 @@
 
   <div id="loading" class="screen">
     <noscript>Enable JavaScript</noscript>
-    <h1 class="loading-text">Press ` and = to open the config.</h1>
+    <h1 class="loading-text">Press ` and = to open the configs.</h1>
     
     <div class="progress-bar-outer"><div class="progress-bar-inner" id="loading-inner"></div></div>
   </div>
