--- a/Parabox/index.html
+++ b/Parabox/index.html
@@ -223,11 +223,15 @@
       scaffolding.setUsername("player####".replace(/#/g, () => Math.floor(Math.random() * 10)));
       scaffolding.setAccentColor("#ff4c4c");
 
-      scaffolding.addCloudProvider(new Scaffolding.Cloud.WebSocketProvider(["wss://clouddata.turbowarp.org","wss://clouddata.turbowarp.xyz"], "p4-@PARABOX.sb3"));
+      try {
+        scaffolding.addCloudProvider(new Scaffolding.Cloud.WebSocketProvider(["wss://clouddata.turbowarp.org","wss://clouddata.turbowarp.xyz"], "p4-@PARABOX.sb3"));
+      } catch (error) {
+        console.error(error);
+      }
 
       const greenFlagButton = document.createElement('img');
       greenFlagButton.src = 'data:image/svg+xml,' + encodeURIComponent('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16.63 17.5"><path d="M.75 2a6.44 6.44 0 017.69 0h0a6.44 6.44 0 007.69 0v10.4a6.44 6.44 0 01-7.69 0h0a6.44 6.44 0 00-7.69 0" fill="#4cbf56" stroke="#45993d" stroke-linecap="round" stroke-linejoin="round"/><path stroke-width="1.5" fill="#4cbf56" stroke="#45993d" stroke-linecap="round" stroke-linejoin="round" d="M.75 16.75v-16"/></svg>');
-      greenFlagButton.className = 'control-button';
+      greenFlagButton.className = 'control-button green-flag-button';
       greenFlagButton.draggable = false;
       greenFlagButton.addEventListener('click', () => {
         scaffolding.greenFlag();
@@ -244,7 +248,7 @@
       });
 
       const pauseButton = document.createElement('img');
-      pauseButton.className = 'control-button';
+      pauseButton.className = 'control-button pause-button';
       pauseButton.draggable = false;
       let isPaused = false;
       pauseButton.addEventListener('click', () => {
@@ -267,7 +271,7 @@
 
       const stopAllButton = document.createElement('img');
       stopAllButton.src = 'data:image/svg+xml,' + encodeURIComponent('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14"><path fill="#ec5959" stroke="#b84848" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M4.3.5h5.4l3.8 3.8v5.4l-3.8 3.8H4.3L.5 9.7V4.3z"/></svg>');
-      stopAllButton.className = 'control-button';
+      stopAllButton.className = 'control-button stop-all-button';
       stopAllButton.draggable = false;
       stopAllButton.addEventListener('click', () => {
         scaffolding.stopAll();
@@ -336,17 +340,15 @@
         enabled: true,
         warpTimer: false
       });
+      if (vm.renderer.setMaxTextureDimension) vm.renderer.setMaxTextureDimension(2048);
 
       if (typeof ScaffoldingAddons !== 'undefined') {
         ScaffoldingAddons.run(scaffolding, {"gamepad":false,"pointerlock":false,"specialCloudBehaviors":false,"unsafeCloudBehaviors":false,"pause":true});
       }
 
       scaffolding.setExtensionSecurityManager({
-        getSandboxMode: 'unsandboxed',
-        canLoadExtensionFromProject: (url) => {
-          handleError(new Error('Missing custom extension: ' + url));
-          return Promise.resolve(false);
-        }
+        getSandboxMode: () => 'unsandboxed',
+        canLoadExtensionFromProject: () => true
       });
       for (const extension of []) {
         vm.extensionManager.loadExtensionURL(extension);
@@ -366,7 +368,12 @@
         };
         
         storage.addWebStore(
-          [storage.AssetType.ImageVector, storage.AssetType.ImageBitmap, storage.AssetType.Sound],
+          [
+            storage.AssetType.ImageVector,
+            storage.AssetType.ImageBitmap,
+            storage.AssetType.Sound,
+            storage.AssetType.Font
+          ].filter(i => i),
           (asset) => new URL('./assets/' + asset.assetId + '.' + asset.dataFormat, location).href
         );
         return () => new Promise((resolve, reject) => {
